--- a/environment.yaml
+++ b/environment.yaml
@@ -51,6 +51,7 @@ dependencies:
     - numpy==1.24.2
     - opencv-python==4.7.0.72
     - packaging==23.0
+    - pandas
     - pathy==0.10.1
     - pillow==9.5.0
     - preshed==3.0.8
@@ -75,6 +76,7 @@ dependencies:
     - transformers==4.27.4
     - typer==0.7.0
     - typing-extensions==4.5.0
+    - ultralytics==8.2.28
     - urllib3==1.26.15
     - wasabi==1.1.1
     - yapf==0.32.0
